<resources>
    <string name="app_name">SMART TB</string>

    <!-- LOGIN -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">MASUK</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="or">- OR -</string>
    <string name="fblogin">SIGN IN WITH FACEBOOK</string>
    <string name="gglogin">SIGN IN WITH GOOGLE</string>
    <string name="sign_up">SIGN UP</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="pilih_tanggal">Pilih tanggal lahir</string>
    <string name="automatic_login">Automatic Login</string>
    <string name="tanggal_wawancara">Tanggal Wawancara</string>
    <string name="nik">NIK</string>
    <string name="triwulan_wawancara">Triwulan Wawancara</string>
    <string name="unit_pelayanan_kesehatan">Unit Pelayanan Kesehatan</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="kab_kota">Kab/Kota</string>
    <string name="oflinesentence"><b><u> Anda sedang offline? Klik Disini </u></b>.</string>
    <string-array name="gender">
        <item>Jenis Kelamin</item>
        <item>L</item>
        <item>P</item>
    </string-array>
    <string-array name="typelogin">
        <item>Pilihan Login</item>
        <item>Kader</item>
        <item>Nakes</item>
    </string-array>
    <string-array name="yn">
        <item>Tidak</item>
        <item>Ya</item>
    </string-array>
    <string name="title_activity_maps_activity">Map</string>
    <string name="PROFIL">PROFIL</string>
    <string name="kasustb">KASUS TB</string>
    <string name="inverstigasi">INVERSTIGASI</string>
    <string name="notifikasi">NOTIFIKASI</string>
    <string name="GPS">GPS</string>
    <string name="poin">POIN</string>
    <string name="skoringtb">SKORING TB</string>
    <string-array name="HIV">
        <item>Positif</item>
        <item>Negatif</item>
        <item>Tidak diperiksa</item>
    </string-array>
    <string-array name="resikolain">
        <item>Gizi Buruk</item>
        <item>DM</item>
        <item>Keganasan</item>
    </string-array>
    <string-array name="hasilakhirkontak">
        <item>Sakit TB</item>
        <item>Infeksi laten TB</item>
        <item>Tidak Ada Bukti</item>
    </string-array>
    <string-array name="tindaklanjutkontak">
        <item>OAT</item>
        <item>PP INH</item>
        <item>Observasi Timbulnya Gejala</item>
        <item>Evaluasi Presisten si Gejala</item>
    </string-array>
    <string-array name="hasilppinh">
        <item>Pengobatan Lengkap</item>
        <item>Putus Berobat</item>
        <item>Meninggal</item>
        <item>Gagal</item>
    </string-array>
    <string-array name="kontak">
        <item>Tidak jelas</item>
        <item>Tidak ada</item>
        <item>Ada , BTA(-)/ Tidak tahu</item>
        <item>Ada , BTA(+)</item>
    </string-array>
    <string-array name="berat3">
        <item> -  </item>>
        <item>Naik</item>
        <item>Tidak Naik</item>
        <item>2 Kali naik Berturut(2T)</item>
        <item>BGM</item>
        <item>Tidak Tau</item>
    </string-array>
    <string-array name="berat6">
        <item> -  </item>>
        <item>Naik</item>
        <item>Tidak Naik</item>
        <item>2 Kali naik Berturut(2T)</item>
        <item>Tidak Tau</item>
    </string-array>
    <string-array name="demam">
        <item>Tidak ada</item>
        <item>Ada (>= 2 minggu tidak Sembuh)</item>
    </string-array>
    <string-array name="batuk">
        <item>Tidak ada</item>
        <item>Ada (>= 2 minggu)</item>
    </string-array>
    <string-array name="pembesaran">
        <item>Tidak ada</item>
        <item>Ada dileher /ketiak/lipat paha</item>
    </string-array>
    <string-array name="tulang">
        <item>Tidak ada</item>
        <item>Ada : sendi panggul/lutut</item>
    </string-array>
    <string-array name="tuberkulin">
        <item>Negatif</item>
        <item>Positif</item>
    </string-array>
    <string-array name="toraks">
        <item>Normal</item>
        <item>Gambaran Sugestif</item>
    </string-array>
    <string-array name="bbgizi">
        <item> - </item>
        <item>BB/TB&lt;90% atau BB/U&lt;80%</item>
        <item>Klinis gizi buruk</item>
    </string-array>
    <string-array name="minggu">
        <item> tidak ada </item>
        <item> >= 2 Minggu</item>
    </string-array>
    <string-array name="tulangsc">
        <item>Tidak ada</item>
        <item>Ada pembengkakan</item>
    </string-array>
    <string-array name="pembengkakansc">
        <item>Tidak ada</item>
        <item>Lebih dari 1 cm</item>
    </string-array>
    <string-array name="kecamatan">
        <item>Kecamatan</item>
        <item>Fanayama</item>
        <item>Maniamolo</item>
    </string-array>
    <string-array name="fanayama">
        <item>Kelurahan</item>
        <item>Bawofanayama</item>
        <item>Bawomataluo</item>
        <item>Bawonahono</item>
        <item>Eho Orahili Fau</item>
        <item>Ete Batu</item>
        <item>Hilifarokhalawa</item>
        <item>Hilikaramaha</item>
        <item>Hilinawalo Fau</item>
        <item>Hiliofonaluo</item>
        <item>Hilisalawa</item>
        <item>Hilizihono</item>
        <item>Lahusa Fau</item>
        <item>Orahili Fau</item>
        <item>Orahili Gito</item>
        <item>Onohondro</item>
        <item>Siwalawa</item>
        <item>Siliwulawa</item>

    </string-array>
    <string-array name="miniamolo">
        <item>Kelurahan</item>
        <item>Bawohosi</item>
        <item>Bawogosali</item>
        <item>Bawosaodano</item>
        <item>Bonia</item>
        <item>Eho</item>
        <item>Faomasi</item>
        <item>Hiliaurifa</item>
        <item>Hilifalawu</item>
        <item>Hilisimaetano</item>
        <item>Idala Jaya</item>
        <item>Ndraso Maenamolo</item>
        <item>Pekan So onogeu</item>
        <item>Samadaya</item>
        <item>Soto o</item>

    </string-array>
    <string-array name="usia">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
    </string-array>
    <string-array name="anaklains">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>
    <string-array name="provinsi">
        <item>Sumatera Utara</item>
    </string-array>
    <string-array name="kab">
        <item>Nias Selatan</item>
    </string-array>
    <string-array name="pilihkec">
        <item>Pilih Kelurahan</item>
    </string-array>


</resources>
