<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuNakesActivity"
    android:background="@drawable/ce"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

            <Button
                android:id="@+id/btnprofilnks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@color/colorPrimary"
                android:drawableTop="@drawable/profile"
                android:text="@string/PROFIL"
                android:textColor="@android:color/white"/>

            <Button
                android:id="@+id/btnnotifnks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@color/colorPrimary"
                android:drawableTop="@drawable/notif"
                android:text="@string/notifikasi"
                android:textColor="@android:color/white"/>

            <Button
                android:id="@+id/btnskrnks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@color/colorPrimary"
                android:drawableTop="@drawable/kasus"
                android:text="@string/skoringtb"
                android:textColor="@android:color/white"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

            <Button
                android:id="@+id/btnkasusnks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@color/colorPrimary"
                android:drawableTop="@drawable/kasus"
                android:text="@string/kasustb"
                android:textColor="@android:color/white"/>


            <Button
                android:id="@+id/btnpoinnks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@color/colorPrimary"
                android:drawableTop="@drawable/poin"
                android:textColor="@android:color/white"
                android:text="@string/poin"/>



    </LinearLayout>

</LinearLayout>